update file pattern to download

--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
     environment {
     	CREDENTIALS_ID ='vfpt-edis'
         BUCKET = 'rawingest'
-        PATTERN = 'ngbi'
+        PATTERN = 'ngbi/*'
         LOCAL_DIR = '/home/mariana/Documents/'
     }
 
