--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -48,16 +48,39 @@ pipeline {
         			sh "if git show-ref --quiet refs/heads/init; then git branch -D init; else git init; fi"
         			sh "git checkout -b init"
 
-        			//Create remote
-					sh "git remote add $COMPOSER_GIT https://$COMPOSER_GIT_URL"
-
 					// Get git credentials
 					withCredentials([gitUsernamePassword(credentialsId: '$GIT_CREDENTIAL_ID', gitToolName: 'git')]) {
 						//Fetch remote (-f: force, -P prune tags)
-						sh "git fetch -f -P -p $COMPOSER_GIT"
+						setupRemote('$COMPOSER_GIT', '$COMPOSER_GIT_URL')
 					}
         		}
         	}
         }
     }
+}
+
+/*****************************************
+* Add repo remote to workspace and 
+* perform git fetch
+****************************************/
+def setupRemote(name = '', urlWithoutProtocol = '')
+//, username = '', password = '') {
+	boolean remoteExists = (sh(returnStdout: true, script: 'if [[ $(git remote | grep ^' + name + '$) ]]; then echo "true"; else echo "false"; fi').trim() == "true")
+	
+	if (remoteExists) {
+		//Set remote url (to be sure)
+		sh "git remote set-url " + name + " https://" + urlWithoutProtocol
+	}
+	else {
+		//Create remote
+		sh "git remote add " + name + " https://" + urlWithoutProtocol
+	}
+
+	//sh "echo 'https://" + java.net.URLEncoder.encode(username, "UTF-8") + ":" + java.net.URLEncoder.encode(password, "UTF-8") + "@"+ urlWithoutProtocol + "' >> '$WORKSPACE/.git/.git-credentials'"
+	//sh "git config credential.helper \"store --file='$WORKSPACE/.git/.git-credentials'\""
+
+	// remove all local tags & fetch remote tags
+	sh "git tag -l | xargs git tag -d && git fetch -t"
+	//Fetch remote
+	sh "git fetch -f -P -p " + name
 }
