--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -63,7 +63,7 @@ pipeline {
 * Add repo remote to workspace and 
 * perform git fetch
 ****************************************/
-def setupRemote(name = '', urlWithoutProtocol = '')
+def setupRemote(name = '', urlWithoutProtocol = '') {
 //, username = '', password = '') {
 	boolean remoteExists = (sh(returnStdout: true, script: 'if [[ $(git remote | grep ^' + name + '$) ]]; then echo "true"; else echo "false"; fi').trim() == "true")
 	
