--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -45,7 +45,7 @@ pipeline {
         	steps {
         		script{
         			// Store initial state in init branch, if doesn't exist create one (refs/heads/init)
-        			sh "if git show-ref --quiet refs/heads/init; then git branch -D init; else git init; fi"
+        			sh "if git show-ref --quiet refs/heads/init; then git branch -D init; fi"
         			sh "git checkout -b init"
 
 					// Get git credentials
@@ -65,7 +65,8 @@ pipeline {
 ****************************************/
 def setupRemote(name = '', urlWithoutProtocol = '') {
 //, username = '', password = '') {
-	boolean remoteExists = (sh(returnStdout: true, script: 'if $(git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == "true")
+	sh 'if [[ $(git remote | grep ^' + name + '$) ]]; then echo "true"; else echo "false"; fi'
+	boolean remoteExists = (sh(returnStdout: true, script: 'if [[ $(git remote | grep ^' + name + '$) ]]; then echo "true"; else echo "false"; fi').trim() == "true")
 	
 	if (remoteExists) {
 		//Set remote url (to be sure)
