--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -65,8 +65,8 @@ pipeline {
 ****************************************/
 def setupRemote(name = '', urlWithoutProtocol = '') {
 //, username = '', password = '') {
-	sh 'if [[ $(git remote | grep ^' + name + '$) ]]; then echo "true"; else echo "false"; fi'
-	boolean remoteExists = (sh(returnStdout: true, script: 'if [[ $(git remote | grep ^' + name + '$) ]]; then echo "true"; else echo "false"; fi').trim() == "true")
+	sh 'if $(git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi'
+	boolean remoteExists = (sh(returnStdout: true, script: 'if $(git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == "true")
 	
 	if (remoteExists) {
 		//Set remote url (to be sure)
