--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -18,6 +18,7 @@ pipeline {
     }
 
     stages {
+    	/*
         stage('Download from GCS') {
             steps {
             	// Download from GCS bucket object named PATTERN to directory LOCAL_DIR.
@@ -34,6 +35,7 @@ pipeline {
                 	localDirectory: env.LOCAL_DIR])
             }
         }
+        */
 
         stage('Print working directory') {
         	steps {
@@ -49,7 +51,7 @@ pipeline {
       				sh "git checkout -b init"
 
 					// Get git credentials
-					withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: repoConfig.credentialId, usernameVariable: 'GIT_USERNAME', passwordVariable: 'GIT_PASSWORD']]){
+					withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: $GIT_CREDENTIAL_ID, usernameVariable: 'GIT_USERNAME', passwordVariable: 'GIT_PASSWORD']]){
 							setupRemote('$COMPOSER_GIT', '$COMPOSER_GIT_URL', env.GIT_USERNAME, env.GIT_PASSWORD)
 						}
 					}
