--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -65,7 +65,7 @@ pipeline {
 * perform git fetch
 ****************************************/
 def setupRemote(name = '', urlWithoutProtocol = '', username = '', password = '') {
-	boolean remoteExists = (sh(returnStdout: true, script: 'if [[ $(git remote | grep ^' + name + '$) ]]; then echo "true"; else echo "false"; fi').trim() == "true")
+	boolean remoteExists = (sh(returnStdout: true, script: 'if $(git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == "true")
 	
 	if (remoteExists) {
 		//Set remote url (to be sure)
