--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -52,7 +52,7 @@ pipeline {
 
 					// Get git credentials
 					withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: env.GIT_CREDENTIAL_ID, usernameVariable: 'GIT_USERNAME', passwordVariable: 'GIT_PASSWORD']]){
-							setupRemote('$COMPOSER_GIT', '$COMPOSER_GIT_URL', env.GIT_USERNAME, env.GIT_PASSWORD)
+							setupRemote(env.COMPOSER_GIT, env.COMPOSER_GIT_URL, env.GIT_USERNAME, env.GIT_PASSWORD)
 						}
 					}
         	}
@@ -67,7 +67,9 @@ pipeline {
 def setupRemote(name = '', urlWithoutProtocol = '', username = '', password = '') {
 	boolean remoteExists = (sh(returnStdout: true, script: 'if $(git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == "true")
 	
-	if (remoteExists) {
+	// since it already exists and the validation gives a false result
+    //sh "git remote set-url " + name + " https://" + urlWithoutProtocol
+    if (remoteExists) {
 		//Set remote url (to be sure)
 		sh "git remote set-url " + name + " https://" + urlWithoutProtocol
 	}
