--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -65,7 +65,8 @@ pipeline {
 * perform git fetch
 ****************************************/
 def setupRemote(name = '', urlWithoutProtocol = '', username = '', password = '') {
-	boolean remoteExists = (sh(returnStdout: true, script: 'if $(git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == "true")
+	//boolean remoteExists = (sh(returnStdout: true, script: 'if $(git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == "true")
+    sh 'if $(git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi'
 	
 	// since it already exists and the validation gives a false result
     //sh "git remote set-url " + name + " https://" + urlWithoutProtocol
