--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -55,6 +55,8 @@ pipeline {
 							setupRemote(env.COMPOSER_GIT, env.COMPOSER_GIT_URL, env.GIT_USERNAME, env.GIT_PASSWORD)
 						}
 					}
+                    sh 'if $(git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi'
+
         	}
         }
     }
@@ -65,19 +67,19 @@ pipeline {
 * perform git fetch
 ****************************************/
 def setupRemote(name = '', urlWithoutProtocol = '', username = '', password = '') {
-	//boolean remoteExists = (sh(returnStdout: true, script: 'if $(git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == "true")
-    sh 'if $(git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi'
+	boolean remoteExists = (sh(returnStdout: true, script: 'if $(git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == "true")
+    //https://stackoverflow.com/questions/59220020/why-jenkins-mounts-a-temporary-volume-in-addition-to-the-workspace
 	
 	// since it already exists and the validation gives a false result
     //sh "git remote set-url " + name + " https://" + urlWithoutProtocol
-    if (remoteExists) {
+    /*if (remoteExists) {
 		//Set remote url (to be sure)
 		sh "git remote set-url " + name + " https://" + urlWithoutProtocol
 	}
 	else {
 		//Create remote
 		sh "git remote add " + name + " https://" + urlWithoutProtocol
-	}
+	} */
 
 	sh "echo 'https://" + java.net.URLEncoder.encode(username, "UTF-8") + ":" + java.net.URLEncoder.encode(password, "UTF-8") + "@"+ urlWithoutProtocol + "' >> '$WORKSPACE/.git/.git-credentials'"
 	sh "git config credential.helper \"store --file='$WORKSPACE/.git/.git-credentials'\""
