--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -57,7 +57,7 @@ pipeline {
 					}
                     sh '''
                         pwd
-                        if $(git remote | grep ^composer_repo$); then echo "true"; else echo "false"; fi
+                        if git remote | grep ^composer_repo$; then echo "true"; else echo "false"; fi
                         '''
 
         	}
