--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -67,10 +67,11 @@ pipeline {
 * perform git fetch
 ****************************************/
 def setupRemote(name = '', urlWithoutProtocol = '', username = '', password = '') {
-	boolean remoteExists = (sh(returnStdout: true, script: 'if $(git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == "true")
+	boolean remoteExists = (sh(returnStdout: true, script: 'if (git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == "true")
     //https://stackoverflow.com/questions/59220020/why-jenkins-mounts-a-temporary-volume-in-addition-to-the-workspace
+	sh 'if git remote | grep ^' + name + '$; then echo "true"; else echo "false"; fi'
 	
-	// since it already exists and the validation gives a false result
+    // since it already exists and the validation gives a false result
     //sh "git remote set-url " + name + " https://" + urlWithoutProtocol
     /*if (remoteExists) {
 		//Set remote url (to be sure)
