--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -68,10 +68,12 @@ pipeline {
 ****************************************/
 def setupRemote(name = '', urlWithoutProtocol = '', username = '', password = '') {
 	boolean remoteExists = (sh(returnStdout: true, script: 'if (git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == "true")
+    def print_output = sh(returnStdout: true, script: 'if (git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim()
+    println("print_output: " + print_output)
     //https://stackoverflow.com/questions/59220020/why-jenkins-mounts-a-temporary-volume-in-addition-to-the-workspace
     println(remoteExists)
 
-    sh 'if (git remote | grep ^' + name + '$); then git remote set-url ' + name + ' https://' + urlWithoutProtocol + '; else echo "false"; fi'
+    sh 'if (git remote | grep ^' + name + '$); then git remote set-url ' + name + ' https://' + urlWithoutProtocol + '; else git remote add ' + name + ' https://' + urlWithoutProtocol +'; fi'
 	
     /*if (remoteExists) {
 		//Set remote url (to be sure)
