--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -67,7 +67,7 @@ pipeline {
 * perform git fetch
 ****************************************/
 def setupRemote(name = '', urlWithoutProtocol = '', username = '', password = '') {
-	boolean remoteExists = (sh(returnStdout: true, script: 'if (git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == "true")
+	boolean remoteExists = (sh(returnStdout: true, script: 'if (git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == name)
     def print_output = sh(returnStdout: true, script: 'if (git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim()
     println("print_output: " + print_output)
     //https://stackoverflow.com/questions/59220020/why-jenkins-mounts-a-temporary-volume-in-addition-to-the-workspace
