--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -70,7 +70,8 @@ def setupRemote(name = '', urlWithoutProtocol = '', username = '', password = ''
 	boolean remoteExists = (sh(returnStdout: true, script: 'if (git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == name)
     //https://stackoverflow.com/questions/59220020/why-jenkins-mounts-a-temporary-volume-in-addition-to-the-workspace
     println("test: " + sh(returnStdout: true, script: 'if (git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim())
-    println(remoteExists)
+    println("remoteExists: " +remoteExists)
+    println(remoteExists == "true")
 
     //sh 'if (git remote | grep ^' + name + '$); then git remote set-url ' + name + ' https://' + urlWithoutProtocol + '; else git remote add ' + name + ' https://' + urlWithoutProtocol +'; fi'
 	
