--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -71,7 +71,7 @@ def setupRemote(name = '', urlWithoutProtocol = '', username = '', password = ''
 	//boolean remoteExists = (sh(returnStdout: true, script: 'if (git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == name)
     //https://stackoverflow.com/questions/59220020/why-jenkins-mounts-a-temporary-volume-in-addition-to-the-workspace
     def remoteExists = (existingRepo == name.trim())
-    println("existingRepo: " + existingRepo)
+    println("existingRepo: '" + existingRepo + "'")
     println("name: '" + name + "'")
     println(remoteExists == "true")
 
