--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -70,8 +70,8 @@ def setupRemote(name = '', urlWithoutProtocol = '', username = '', password = ''
     def existingRepo = sh(returnStdout: true, script: 'if (git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim()
 	//boolean remoteExists = (sh(returnStdout: true, script: 'if (git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == name)
     //https://stackoverflow.com/questions/59220020/why-jenkins-mounts-a-temporary-volume-in-addition-to-the-workspace
-    def remoteExists = (existingRepo == name.trim())
-    println("existingRepo: '" + existingRepo + "'")
+    def remoteExists = (existingRepo.split('\n').[0].trim() == name.trim())
+    println("existingRepo: '" + existingRepo.split('\n').[0].trim() + "'")
     println("name: '" + name + "'")
     println(remoteExists == "true")
 
