--- a/sync_test/Jenkinsfile
+++ b/sync_test/Jenkinsfile
@@ -67,6 +67,7 @@ pipeline {
 * perform git fetch
 ****************************************/
 def setupRemote(name = '', urlWithoutProtocol = '', username = '', password = '') {
+    /*
     def existingRepo = sh(returnStdout: true, script: 'if (git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim()
 	//boolean remoteExists = (sh(returnStdout: true, script: 'if (git remote | grep ^' + name + '$); then echo "true"; else echo "false"; fi').trim() == name)
     //https://stackoverflow.com/questions/59220020/why-jenkins-mounts-a-temporary-volume-in-addition-to-the-workspace
@@ -74,9 +75,13 @@ def setupRemote(name = '', urlWithoutProtocol = '', username = '', password = ''
     println("existingRepo: '" + existingRepo.split('\n')[0].trim() + "'")
     println("name: '" + name + "'")
     println(remoteExists == "true")
+    */
 
-    //sh 'if (git remote | grep ^' + name + '$); then git remote set-url ' + name + ' https://' + urlWithoutProtocol + '; else git remote add ' + name + ' https://' + urlWithoutProtocol +'; fi'
+    sh 'if (git remote | grep ^' + name + '$); \
+        then git remote set-url ' + name + ' https://' + urlWithoutProtocol + '; \
+        else git remote add ' + name + ' https://' + urlWithoutProtocol +'; fi'
 	
+    /*
     if (remoteExists == "true") {
 		//Set remote url (to be sure)
 		sh "git remote set-url " + name + " https://" + urlWithoutProtocol
@@ -85,6 +90,7 @@ def setupRemote(name = '', urlWithoutProtocol = '', username = '', password = ''
 		//Create remote
 		sh "git remote add " + name + " https://" + urlWithoutProtocol
 	}
+    */
 
 	sh "echo 'https://" + java.net.URLEncoder.encode(username, "UTF-8") + ":" + java.net.URLEncoder.encode(password, "UTF-8") + "@"+ urlWithoutProtocol + "' >> '$WORKSPACE/.git/.git-credentials'"
 	sh "git config credential.helper \"store --file='$WORKSPACE/.git/.git-credentials'\""
